--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "apollo-server-express": "^3.6.7",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
+    "express-jwt": "^7.4.3",
     "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9"
   },
   "devDependencies": {
